--- a/students.html
+++ b/students.html
@@ -2,277 +2,163 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>نظام OMA المتطور - إدارة الطلاب</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>نظام OMA - الإعدادات والدخول</title>
 <style>
-:root{
-  --primary:#004aad;
-  --accent:#ffcc33;
-  --bg:#f5f9ff;
-  --card:#fff;
-}
-*{box-sizing:border-box}
-body{
-  font-family: 'Cairo',sans-serif;
-  margin:0;background:linear-gradient(180deg,var(--bg),#fff);
-  color:#102027;direction:rtl;visibility:hidden;
-}
-header{
-  background:linear-gradient(90deg,var(--primary),#007bff);
-  color:#fff;padding:18px 16px;text-align:center;font-size:20px;font-weight:700;
-  box-shadow:0 3px 12px rgba(2,20,40,0.08);
-}
+body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;visibility:hidden;}
+header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
-.controls{display:flex;gap:12px;flex-wrap:wrap;margin-bottom:14px;align-items:center;}
-.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);flex:1}
-.form-grid{display:flex;flex-wrap:wrap;gap:10px}
-input[type="text"], input[type="tel"], input[type="number"], select, textarea, .subject-field {
-  padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;
-}
-.two{width:calc(50% - 6px)}
-label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
-.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700}
-.btn.warn{background:#ff7043}
-.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12)}
-.btn.small{padding:6px 8px;font-size:13px;border-radius:6px}
-.add-subj{display:inline-block;margin-top:6px}
-table{width:100%;border-collapse:collapse;margin-top:12px}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px}
-th{background:var(--primary);color:#fff}
-.actions button{margin:0 6px}
-.badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700}
-.modal { position:fixed; left:0; top:0; right:0; bottom:0; background:rgba(0,0,0,0.45); display:none; align-items:center; justify-content:center; z-index:9999;}
-.modal.open{display:flex}
-.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto}
-.flex{display:flex;gap:8px;align-items:center}
+.card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
+input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
+label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
+.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-bottom:8px;}
+.btn.warn{background:#ff7043;}
+table{width:100%;border-collapse:collapse;margin-top:12px;}
+th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
+th{background:#004aad;color:#fff;}
 </style>
 </head>
 <body>
-<header>نظام OMA - إدارة الطلاب (متطور)</header>
+<header>نظام OMA - الإعدادات والدخول</header>
 <div class="wrap">
 
-<div class="controls">
-  <div style="flex:1" class="card">
-    <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-      <div>
-        <strong>أضف طالب جديد</strong>
-        <div style="font-size:13px;color:#546e7a">املأ الحقول ثم اضغط حفظ</div>
-      </div>
-    </div>
-
-    <form id="studentForm" style="margin-top:12px">
-      <div class="form-grid">
-        <div class="two">
-          <label>الاسم الكامل</label>
-          <input id="name" type="text" required />
-        </div>
-        <div class="two">
-          <label>رقم الموبايل</label>
-          <input id="phone" type="tel" required />
-        </div>
-        <div class="two">
-          <label>العنوان</label>
-          <input id="address" type="text" />
-        </div>
-        <div class="two">
-          <label>اسم المدرسة</label>
-          <input id="school" type="text" />
-        </div>
-        <div class="two">
-          <label>المرحلة الدراسية</label>
-          <input id="stage" type="text" />
-        </div>
-        <div class="two">
-          <label>المجموعة / الكروب</label>
-          <input id="group" type="text" placeholder="مثال: A أو 101" />
-        </div>
-
-        <div style="width:100%">
-          <label>المواد (أضف أكثر من مادة)</label>
-          <div id="subjectsContainer" style="display:flex;flex-wrap:wrap;gap:8px"></div>
-          <div style="margin-top:8px">
-            <button id="addSubjectBtn" type="button" class="btn ghost small add-subj">➕ إضافة مادة</button>
-          </div>
-        </div>
-
-        <div class="two">
-          <label>إجمالي الأقساط (اختياري)</label>
-          <input id="totalFees" type="number" min="0" />
-        </div>
-        <div class="two">
-          <label>ملاحظة / وصف الطالب</label>
-          <input id="note" type="text" />
-        </div>
-
-        <div style="width:100%;display:flex;gap:8px;justify-content:flex-end">
-          <button id="saveStudentBtn" class="btn" type="submit">✅ حفظ الطالب</button>
-          <button id="clearFormBtn" type="button" class="btn ghost">مسح الحقول</button>
-        </div>
-      </div>
-    </form>
-  </div>
+<!-- إعدادات النسب -->
+<div class="card">
+  <strong>إعدادات النسب</strong>
+  <form id="settingsForm">
+    <label>نسبة المعهد %</label>
+    <input id="instituteShare" type="number" min="0" max="100">
+    <label>نسبة الأستاذ %</label>
+    <input id="teacherShare" type="number" min="0" max="100">
+    <button type="submit" class="btn">✅ حفظ الإعدادات</button>
+  </form>
 </div>
 
+<!-- إدارة الحسابات -->
 <div class="card">
-  <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-    <div><strong>قائمة الطلاب</strong> <span id="totalCount" class="badge">0</span></div>
-  </div>
-  <table id="studentsTable">
+  <strong>إدارة دخول الطلاب والأساتذة</strong>
+  <form id="userForm">
+    <label>نوع الحساب</label>
+    <select id="userType">
+      <option value="student">طالب</option>
+      <option value="teacher">أستاذ</option>
+      <option value="admin">مدير/محاسب</option>
+    </select>
+    <label>الاسم الكامل</label>
+    <input id="userName" type="text" required>
+    <label>البريد الإلكتروني</label>
+    <input id="userEmail" type="email" required>
+    <label>كلمة المرور</label>
+    <input id="userPassword" type="password" required>
+    <button type="submit" class="btn">✅ إضافة المستخدم</button>
+  </form>
+</div>
+
+<!-- جدول المستخدمين -->
+<div class="card">
+  <strong>قائمة المستخدمين</strong>
+  <table id="usersTable">
     <thead>
       <tr>
         <th>الاسم</th>
-        <th>الهاتف</th>
-        <th>المرحلة</th>
-        <th>المجموعة</th>
-        <th>الأقساط</th>
-        <th>الخيارات</th>
+        <th>البريد الإلكتروني</th>
+        <th>نوع الحساب</th>
+        <th>خيارات</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 </div>
 
-<div id="modal" class="modal" aria-hidden="true">
-  <div class="box">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
-      <strong id="modalTitle">تفاصيل الطالب</strong>
-      <button id="closeModal" class="btn ghost">إغلاق</button>
-    </div>
-    <div id="modalBody"></div>
-  </div>
-</div>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, setDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, onAuthStateChanged, createUserWithEmailAndPassword, deleteUser as fbDeleteUser } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-// 🔹 إعداد Firebase
 const firebaseConfig = {
-  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
-  authDomain: "oma2-d36fa.firebaseapp.com",
-  projectId: "oma2-d36fa",
-  storageBucket: "oma2-d36fa.appspot.com",
-  messagingSenderId: "774171603105",
-  appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
+  apiKey: "YOUR_API_KEY",
+  authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+  projectId: "YOUR_PROJECT_ID",
+  storageBucket: "YOUR_PROJECT_ID.appspot.com",
+  messagingSenderId: "YOUR_SENDER_ID",
+  appId: "YOUR_APP_ID"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    window.location.href = "login.html";
-  } else {
-    document.body.style.visibility = "visible";
-    loadStudents();
-  }
+// 🔹 التأكد من تسجيل الدخول
+onAuthStateChanged(auth, (user)=>{
+  if(!user) window.location.href="login.html";
+  else document.body.style.visibility="visible";
 });
 
-// عناصر النموذج
-const studentForm = document.getElementById("studentForm");
-const subjectsContainer = document.getElementById("subjectsContainer");
-const addSubjectBtn = document.getElementById("addSubjectBtn");
-const studentsTableBody = document.querySelector("#studentsTable tbody");
-let studentsData = [];
-
-// إضافة مادة
-addSubjectBtn.addEventListener("click",()=>{
-  const div = document.createElement("div");
-  div.classList.add("subject-field");
-  div.style.display="flex"; div.style.gap="6px"; div.style.alignItems="center";
-  div.innerHTML = `
-    <input type="text" placeholder="اسم المادة" class="subjName" required />
-    <input type="number" placeholder="إجمالي القسط" class="subjFee" min="0" />
-    <button type="button" class="btn warn small removeSubjBtn">❌</button>
-  `;
-  subjectsContainer.appendChild(div);
-  div.querySelector(".removeSubjBtn").addEventListener("click",()=>{subjectsContainer.removeChild(div);});
-});
-
-// حفظ الطالب
-studentForm.addEventListener("submit", async(e)=>{
+// حفظ الإعدادات
+const settingsForm = document.getElementById("settingsForm");
+settingsForm.addEventListener("submit", async(e)=>{
   e.preventDefault();
-  const name = document.getElementById("name").value.trim();
-  const phone = document.getElementById("phone").value.trim();
-  const address = document.getElementById("address").value.trim();
-  const school = document.getElementById("school").value.trim();
-  const stage = document.getElementById("stage").value.trim();
-  const group = document.getElementById("group").value.trim();
-  const totalFees = parseFloat(document.getElementById("totalFees").value)||0;
-  const note = document.getElementById("note").value.trim();
-
-  const subjects = [];
-  document.querySelectorAll(".subject-field").forEach(sub=>{
-    const subjName = sub.querySelector(".subjName").value.trim();
-    const subjFee = parseFloat(sub.querySelector(".subjFee").value)||0;
-    if(subjName) subjects.push({name:subjName,fee:subjFee});
-  });
-
-  if(subjects.length===0){ alert("أضف مادة واحدة على الأقل"); return;}
-
+  const instituteShare = parseFloat(document.getElementById("instituteShare").value)||0;
+  const teacherShare = parseFloat(document.getElementById("teacherShare").value)||0;
   try{
-    await addDoc(collection(db,"students"),{name,phone,address,school,stage,group,totalFees,note,subjects,createdAt:new Date()});
-    alert("تم حفظ الطالب بنجاح");
-    studentForm.reset();
-    subjectsContainer.innerHTML="";
-    loadStudents();
-  }catch(err){console.error(err);alert("خطأ أثناء الحفظ");}
+    await setDoc(doc(db,"settings","shares"),{instituteShare,teacherShare,updatedAt:new Date()});
+    alert("تم حفظ الإعدادات بنجاح");
+  }catch(err){console.error(err); alert("خطأ أثناء الحفظ");}
 });
 
-// تحميل الطلاب
-async function loadStudents(){
-  const snapshot = await getDocs(collection(db,"students"));
-  studentsTableBody.innerHTML="";
-  studentsData = [];
+// إضافة مستخدم
+const userForm = document.getElementById("userForm");
+const usersTableBody = document.querySelector("#usersTable tbody");
+
+userForm.addEventListener("submit", async(e)=>{
+  e.preventDefault();
+  const type = document.getElementById("userType").value;
+  const name = document.getElementById("userName").value.trim();
+  const email = document.getElementById("userEmail").value.trim();
+  const password = document.getElementById("userPassword").value.trim();
+  try{
+    const userCredential = await createUserWithEmailAndPassword(auth,email,password);
+    await setDoc(doc(db,"users",userCredential.user.uid),{type,name,email,createdAt:new Date()});
+    alert("تم إضافة المستخدم بنجاح");
+    userForm.reset();
+    loadUsers();
+  }catch(err){console.error(err); alert("خطأ أثناء إضافة المستخدم");}
+});
+
+// تحميل المستخدمين
+async function loadUsers(){
+  const snapshot = await getDocs(collection(db,"users"));
+  usersTableBody.innerHTML="";
   snapshot.forEach(docSnap=>{
-    const student = {...docSnap.data(),id:docSnap.id};
-    studentsData.push(student);
+    const user = {...docSnap.data(),id:docSnap.id};
     const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td>${student.name}</td>
-      <td>${student.phone}</td>
-      <td>${student.stage}</td>
-      <td>${student.group}</td>
-      <td>${student.subjects.map(s=>"المادة:"+s.name+" / القسط:"+s.fee).join("<br>")}</td>
-      <td class="actions">
-        <button class="btn small" onclick="showStudent('${student.id}')">🔍 التفاصيل</button>
-        <button class="btn warn small" onclick="deleteStudent('${student.id}')">🗑️ حذف</button>
+    tr.innerHTML=`
+      <td>${user.name}</td>
+      <td>${user.email}</td>
+      <td>${user.type}</td>
+      <td>
+        <button class="btn warn" onclick="deleteUser('${user.id}')">🗑️ حذف</button>
       </td>
     `;
-    studentsTableBody.appendChild(tr);
+    usersTableBody.appendChild(tr);
   });
-  document.getElementById("totalCount").innerText=studentsData.length;
 }
+loadUsers();
 
-// عرض التفاصيل
-window.showStudent = function(id){
-  const student = studentsData.find(s=>s.id===id);
-  if(!student) return;
-  const modal = document.getElementById("modal");
-  const body = document.getElementById("modalBody");
-  body.innerHTML=`<h3>${student.name}</h3>
-    <p>الهاتف: ${student.phone}</p>
-    <p>المرحلة: ${student.stage}</p>
-    <p>المجموعة: ${student.group}</p>
-    <p>العنوان: ${student.address}</p>
-    <p>ملاحظات: ${student.note}</p>
-    <h4>المواد والأقساط:</h4>
-    ${student.subjects.map(s=>`<b>${s.name}</b> - القسط: ${s.fee}`).join("<br>")}`;
-  modal.classList.add("open");
-};
-
-// إغلاق المودال
-document.getElementById("closeModal").addEventListener("click",()=>{document.getElementById("modal").classList.remove("open")});
-
-// حذف طالب
-window.deleteStudent = async function(id){
-  if(confirm("هل تريد حذف الطالب؟")){
-    await deleteDoc(doc(db,"students",id));
-    loadStudents();
+// حذف مستخدم
+window.deleteUser = async(uid)=>{
+  if(confirm("هل تريد حذف المستخدم؟")){
+    try{
+      await deleteDoc(doc(db,"users",uid));
+      // حذف من Firebase Auth
+      const user = auth.currentUser;
+      if(user && user.uid===uid){
+        await fbDeleteUser(user);
+      }
+      loadUsers();
+    }catch(err){console.error(err); alert("خطأ أثناء الحذف");}
   }
-};
+}
 </script>
 </body>
 </html>
