--- a/settings.html
+++ b/settings.html
@@ -5,17 +5,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>نظام OMA - الإعدادات المركزية</title>
 <style>
-body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
-header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
+:root{
+  --primary:#004aad;
+  --accent:#ffcc33;
+  --bg:#f5f9ff;
+  --card:#fff;
+}
+body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:var(--bg);color:#102027;visibility:hidden;}
+header{background:var(--primary);color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
-.card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
+.card{background:var(--card);border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
 input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
-.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-bottom:8px;}
+.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-bottom:8px;}
 .btn.warn{background:#ff7043;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
-th{background:#004aad;color:#fff;}
+th{background:var(--primary);color:#fff;}
 .filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:12px;}
 .filters select{flex:1;}
 </style>
@@ -24,62 +30,39 @@ th{background:#004aad;color:#fff;}
 <header>نظام OMA - الإعدادات المركزية</header>
 <div class="wrap">
 
-<!-- إعدادات النسب -->
+<!-- إنشاء مستخدم -->
 <div class="card">
-  <strong>إعدادات النسب</strong>
-  <form id="settingsForm">
-    <label>نسبة المعهد %</label>
-    <input id="instituteShare" type="number" min="0" max="100">
-    <label>نسبة الأستاذ %</label>
-    <input id="teacherShare" type="number" min="0" max="100">
-    <button type="submit" class="btn">✅ حفظ الإعدادات</button>
-  </form>
-</div>
-
-<!-- إدارة المستخدمين -->
-<div class="card">
-  <strong>إدارة دخول المستخدمين</strong>
+  <strong>إضافة مستخدم جديد</strong>
   <form id="userForm">
     <label>نوع الحساب</label>
     <select id="userType">
+      <option value="">اختر نوع الحساب</option>
       <option value="student">طالب</option>
       <option value="teacher">أستاذ</option>
       <option value="admin">مدير/محاسب</option>
     </select>
+
     <label>الاسم الكامل</label>
-    <input id="userName" type="text" required>
+    <select id="userName" required>
+      <option value="">اختر من البيانات</option>
+    </select>
+
     <label>البريد الإلكتروني</label>
     <input id="userEmail" type="email" required>
+
     <label>كلمة المرور</label>
     <input id="userPassword" type="password" required>
+
     <button type="submit" class="btn">✅ إضافة المستخدم</button>
   </form>
 </div>
 
-<!-- فلاتر وعرض المستخدمين -->
-<div class="card">
-  <strong>قائمة المستخدمين</strong>
-  <div class="filters">
-    <select id="filterType"><option value="">فلترة حسب النوع</option><option value="student">طالب</option><option value="teacher">أستاذ</option><option value="admin">مدير/محاسب</option></select>
-  </div>
-  <table id="usersTable">
-    <thead>
-      <tr>
-        <th>الاسم</th>
-        <th>البريد الإلكتروني</th>
-        <th>النوع</th>
-        <th>خيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
+// ⚡ إعداد Firebase
 const firebaseConfig = {
   apiKey: "API_KEY_HERE",
   authDomain: "PROJECT_ID.firebaseapp.com",
@@ -88,75 +71,73 @@ const firebaseConfig = {
   messagingSenderId: "SENDER_ID",
   appId: "APP_ID"
 };
-
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 const auth = getAuth(app);
 
-// تأمين الصفحة
+// 🔒 حماية الصفحة
 onAuthStateChanged(auth,user=>{
   if(!user) window.location.href="login.html";
+  else document.body.style.visibility="visible";
 });
 
-// حفظ نسب المعهد والأستاذ
-const settingsForm = document.getElementById("settingsForm");
-settingsForm.addEventListener("submit",async(e)=>{
-  e.preventDefault();
-  const inst = parseFloat(document.getElementById("instituteShare").value)||0;
-  const teach = parseFloat(document.getElementById("teacherShare").value)||0;
-  const settingsRef = doc(db,"settings","shares");
-  try{
-    await updateDoc(settingsRef,{institute:inst,teacher:teach});
-    alert("تم حفظ الإعدادات");
-  }catch(err){
-    // إذا لم يكن موجودًا ننشئه
-    await setDoc(settingsRef,{institute:inst,teacher:teach});
-    alert("تم إنشاء وحفظ الإعدادات");
+const userTypeSelect = document.getElementById("userType");
+const userNameSelect = document.getElementById("userName");
+
+let studentsData = [];
+let teachersData = [];
+
+// تحميل بيانات الطلاب والأساتذة مسبقًا
+async function loadData(){
+  const studentsSnap = await getDocs(collection(db,"students"));
+  studentsData = studentsSnap.docs.map(doc=>({...doc.data(),id:doc.id}));
+
+  const teachersSnap = await getDocs(collection(db,"teachers"));
+  teachersData = teachersSnap.docs.map(doc=>({...doc.data(),id:doc.id}));
+}
+await loadData();
+
+// تحديث قائمة الاسماء بناءً على نوع الحساب
+userTypeSelect.addEventListener("change",()=>{
+  const type = userTypeSelect.value;
+  userNameSelect.innerHTML = "<option value=''>اختر من البيانات</option>";
+  if(type==="student"){
+    studentsData.forEach(s=>userNameSelect.innerHTML+=`<option value="${s.id}">${s.name} - ${s.group} - ${s.stage}</option>`);
+  }else if(type==="teacher"){
+    teachersData.forEach(t=>userNameSelect.innerHTML+=`<option value="${t.id}">${t.name}</option>`);
   }
 });
 
-// إضافة مستخدم
-const userForm = document.getElementById("userForm");
-const usersTableBody = document.querySelector("#usersTable tbody");
-
-userForm.addEventListener("submit",async(e)=>{
+// حفظ المستخدم الجديد
+document.getElementById("userForm").addEventListener("submit",async(e)=>{
   e.preventDefault();
-  const type = document.getElementById("userType").value;
-  const name = document.getElementById("userName").value.trim();
+  const type = userTypeSelect.value;
+  const selectedId = userNameSelect.value;
   const email = document.getElementById("userEmail").value.trim();
   const password = document.getElementById("userPassword").value.trim();
+
+  if(!type || !selectedId || !email || !password){alert("الرجاء تعبئة جميع الحقول"); return;}
+
+  // جلب بيانات الشخص من الطلاب أو الأساتذة
+  let userData = {};
+  if(type==="student") userData = studentsData.find(s=>s.id===selectedId);
+  else if(type==="teacher") userData = teachersData.find(t=>t.id===selectedId);
+
   try{
-    await addDoc(collection(db,"users"),{type,name,email,password,createdAt:new Date()});
-    alert("تم إضافة المستخدم");
-    userForm.reset();
-    loadUsers();
-  }catch(err){console.error(err);alert("خطأ أثناء الحفظ");}
+    const cred = await createUserWithEmailAndPassword(auth,email,password);
+    await addDoc(collection(db,"users"),{
+      uid: cred.user.uid,
+      type,
+      linkedId:selectedId,
+      name:userData.name,
+      email,
+      createdAt:new Date()
+    });
+    alert("تم إنشاء المستخدم بنجاح");
+    document.getElementById("userForm").reset();
+    userNameSelect.innerHTML="<option value=''>اختر من البيانات</option>";
+  }catch(err){console.error(err);alert("حدث خطأ أثناء الإنشاء")}
 });
-
-// تحميل المستخدمين
-async function loadUsers(){
-  const snapshot = await getDocs(collection(db,"users"));
-  usersTableBody.innerHTML="";
-  snapshot.forEach(docSnap=>{
-    const u = {...docSnap.data(),id:docSnap.id};
-    const tr = document.createElement("tr");
-    tr.innerHTML=`
-      <td>${u.name}</td>
-      <td>${u.email}</td>
-      <td>${u.type}</td>
-      <td><button class="btn warn" onclick="deleteUser('${u.id}')">🗑️ حذف</button></td>
-    `;
-    usersTableBody.appendChild(tr);
-  });
-}
-loadUsers();
-
-window.deleteUser = async(id)=>{
-  if(confirm("هل تريد حذف هذا المستخدم؟")){
-    await deleteDoc(doc(db,"users",id));
-    loadUsers();
-  }
-}
 </script>
 </body>
 </html>
