--- a/settings.html
+++ b/settings.html
@@ -3,141 +3,134 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - الإعدادات المركزية</title>
+<title>نظام OMA - الإعدادات</title>
 <style>
-:root{
-  --primary:#004aad;
-  --accent:#ffcc33;
-  --bg:#f5f9ff;
-  --card:#fff;
-}
-body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:var(--bg);color:#102027;visibility:hidden;}
-header{background:var(--primary);color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
+body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
+header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
-.card{background:var(--card);border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
+.card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
 input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
-.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-bottom:8px;}
+.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-bottom:8px;}
 .btn.warn{background:#ff7043;}
+.btn.ghost{background:transparent;color:#004aad;border:1px solid #004aad;}
+.table-container{overflow-x:auto;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
-th{background:var(--primary);color:#fff;}
+th{background:#004aad;color:#fff;}
 .filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:12px;}
 .filters select{flex:1;}
 </style>
 </head>
 <body>
-<header>نظام OMA - الإعدادات المركزية</header>
+<header>نظام OMA - الإعدادات</header>
 <div class="wrap">
 
 <!-- إنشاء مستخدم -->
 <div class="card">
   <strong>إضافة مستخدم جديد</strong>
   <form id="userForm">
-    <label>نوع الحساب</label>
+    <label>نوع المستخدم</label>
     <select id="userType">
-      <option value="">اختر نوع الحساب</option>
       <option value="student">طالب</option>
       <option value="teacher">أستاذ</option>
-      <option value="admin">مدير/محاسب</option>
     </select>
-
-    <label>الاسم الكامل</label>
-    <select id="userName" required>
-      <option value="">اختر من البيانات</option>
-    </select>
-
+    <label>الاسم</label>
+    <select id="userName"><option value="">اختر الاسم</option></select>
     <label>البريد الإلكتروني</label>
-    <input id="userEmail" type="email" required>
-
+    <input type="email" id="userEmail" required>
     <label>كلمة المرور</label>
-    <input id="userPassword" type="password" required>
-
-    <button type="submit" class="btn">✅ إضافة المستخدم</button>
+    <input type="password" id="userPassword" required>
+    <button type="submit" class="btn">✅ إنشاء المستخدم</button>
   </form>
 </div>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, collection, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
-import { getAuth, createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+<!-- قائمة المستخدمين -->
+<div class="card">
+  <strong>قائمة المستخدمين</strong>
+  <div class="filters">
+    <select id="filterType"><option value="">فلترة حسب النوع</option><option value="student">طالب</option><option value="teacher">أستاذ</option></select>
+  </div>
+  <div class="table-container">
+    <table id="usersTable">
+      <thead>
+        <tr><th>الاسم</th><th>النوع</th><th>البريد</th><th>خيارات</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+</div>
 
-// ⚡ إعداد Firebase
-const firebaseConfig = {
-  apiKey: "API_KEY_HERE",
-  authDomain: "PROJECT_ID.firebaseapp.com",
-  projectId: "PROJECT_ID",
-  storageBucket: "PROJECT_ID.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
-};
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-const auth = getAuth(app);
+<script>
+// ----- بيانات وهمية للاختبار -----
+let dummyStudents = ["أحمد علي","سارة محمد","محمد خالد"];
+let dummyTeachers = ["أستاذ علي","أستاذة ليلى","أستاذ كريم"];
+let usersData = [];
 
-// 🔒 حماية الصفحة
-onAuthStateChanged(auth,user=>{
-  if(!user) window.location.href="login.html";
-  else document.body.style.visibility="visible";
-});
-
+// ----- تحديث قائمة الأسماء عند تغيير النوع -----
 const userTypeSelect = document.getElementById("userType");
 const userNameSelect = document.getElementById("userName");
 
-let studentsData = [];
-let teachersData = [];
-
-// تحميل بيانات الطلاب والأساتذة مسبقًا
-async function loadData(){
-  const studentsSnap = await getDocs(collection(db,"students"));
-  studentsData = studentsSnap.docs.map(doc=>({...doc.data(),id:doc.id}));
-
-  const teachersSnap = await getDocs(collection(db,"teachers"));
-  teachersData = teachersSnap.docs.map(doc=>({...doc.data(),id:doc.id}));
-}
-await loadData();
-
-// تحديث قائمة الاسماء بناءً على نوع الحساب
-userTypeSelect.addEventListener("change",()=>{
+function updateNames() {
   const type = userTypeSelect.value;
-  userNameSelect.innerHTML = "<option value=''>اختر من البيانات</option>";
-  if(type==="student"){
-    studentsData.forEach(s=>userNameSelect.innerHTML+=`<option value="${s.id}">${s.name} - ${s.group} - ${s.stage}</option>`);
-  }else if(type==="teacher"){
-    teachersData.forEach(t=>userNameSelect.innerHTML+=`<option value="${t.id}">${t.name}</option>`);
-  }
-});
+  userNameSelect.innerHTML = "<option value=''>اختر الاسم</option>";
+  let names = type==="student"?dummyStudents:dummyTeachers;
+  names.forEach(n => {userNameSelect.innerHTML += `<option value="${n}">${n}</option>`});
+}
+userTypeSelect.addEventListener("change", updateNames);
+updateNames();
 
-// حفظ المستخدم الجديد
-document.getElementById("userForm").addEventListener("submit",async(e)=>{
+// ----- إنشاء مستخدم جديد -----
+document.getElementById("userForm").addEventListener("submit", e=>{
   e.preventDefault();
   const type = userTypeSelect.value;
-  const selectedId = userNameSelect.value;
+  const name = userNameSelect.value;
   const email = document.getElementById("userEmail").value.trim();
-  const password = document.getElementById("userPassword").value.trim();
-
-  if(!type || !selectedId || !email || !password){alert("الرجاء تعبئة جميع الحقول"); return;}
-
-  // جلب بيانات الشخص من الطلاب أو الأساتذة
-  let userData = {};
-  if(type==="student") userData = studentsData.find(s=>s.id===selectedId);
-  else if(type==="teacher") userData = teachersData.find(t=>t.id===selectedId);
-
-  try{
-    const cred = await createUserWithEmailAndPassword(auth,email,password);
-    await addDoc(collection(db,"users"),{
-      uid: cred.user.uid,
-      type,
-      linkedId:selectedId,
-      name:userData.name,
-      email,
-      createdAt:new Date()
-    });
-    alert("تم إنشاء المستخدم بنجاح");
-    document.getElementById("userForm").reset();
-    userNameSelect.innerHTML="<option value=''>اختر من البيانات</option>";
-  }catch(err){console.error(err);alert("حدث خطأ أثناء الإنشاء")}
+  if(!type || !name || !email){alert("اكمل جميع الحقول"); return;}
+  const user = {id:Date.now(),type,name,email};
+  usersData.push(user);
+  renderUsers();
+  e.target.reset();
+  updateNames();
 });
+
+// ----- عرض المستخدمين -----
+const usersTableBody = document.querySelector("#usersTable tbody");
+function renderUsers(){
+  const filter = document.getElementById("filterType").value;
+  usersTableBody.innerHTML="";
+  usersData.filter(u=>!filter||u.type===filter).forEach(u=>{
+    const tr = document.createElement("tr");
+    tr.innerHTML = `<td>${u.name}</td><td>${u.type}</td><td>${u.email}</td>
+    <td>
+      <button class="btn small" onclick="editUser(${u.id})">✏️ تعديل</button>
+      <button class="btn warn small" onclick="deleteUser(${u.id})">🗑️ حذف</button>
+    </td>`;
+    usersTableBody.appendChild(tr);
+  });
+}
+
+// ----- حذف مستخدم -----
+function deleteUser(id){
+  if(confirm("هل تريد حذف المستخدم؟")){
+    usersData = usersData.filter(u=>u.id!==id);
+    renderUsers();
+  }
+}
+
+// ----- تعديل مستخدم -----
+function editUser(id){
+  const user = usersData.find(u=>u.id===id);
+  if(!user) return;
+  userTypeSelect.value = user.type;
+  updateNames();
+  userNameSelect.value = user.name;
+  document.getElementById("userEmail").value = user.email;
+  usersData = usersData.filter(u=>u.id!==id);
+}
+
+// ----- فلترة ---
+document.getElementById("filterType").addEventListener("change", renderUsers);
 </script>
 </body>
 </html>
